--- a/creditos.html
+++ b/creditos.html
@@ -3,13 +3,20 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="css/credits.css">
 	<title>Creditos</title>
 </head>
 <body>
+	<audio src="img/musica.mp3" autoplay></audio>
 	<h1><center>Directed by</center></h1>
 	<p>
 		<center>Rey Valentin Arias Perez<br>
 		Víctor Manuel Cañaveral Ortiz</center>
 	</p>
+
+	<footer>
+		<h4>PD: Si no esta escuchando musica de fondo es porque en chrome no encontre la forma de reproducir automaticamente la musica cuando la pagina carga, para mayor inmersion ver esta parte en edge o firefox</h4>
+	</footer>
+	
 </body>
 </html>
