--- a/index.html
+++ b/index.html
@@ -7,14 +7,25 @@
 	<link rel="stylesheet" href="css/main.css">
 	<script src="js/main.js"></script>
 	<link rel="icon" href="img/dice.ico">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+
 </head>
 
 <body>
+	<H1><center>🎲 <i>CRAPS</i> 🎲</center></H1>
 	<div id="contenedorDados">
 		<div id="dado1" class="dado"></div>
 		<div id="dado2" class="dado"></div>
 	</div>
+
 	<input type="button" value="Tirar" id="boton_Tirar">
+
+	<div id="ventana" class="ventanaAlerta">
+		<div class="contenidoVentana">
+			<div id="cerrar" class="botonCerrar">X</div>
+			<p id="mensajeTexto">Mensaje</p>
+		</div>
+	</div>
 
 	<footer>
 		<center><h3>Craps</h3></center>
