--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
 	<input type="button" value="Tirar" id="boton_Tirar">
 
-	<div id="ventana" class="ventanaAlerta">
+	<div id="ventana" class="ventanaAlerta hidden">
 		<div class="contenidoVentana">
-			<div id="cerrar" class="botonCerrar">X</div>
+			<div id="cerrar" class="botonCerrar">x</div>
 			<p id="mensajeTexto">Mensaje</p>
 		</div>
 	</div>
