--- a/creditos.html
+++ b/creditos.html
@@ -14,9 +14,12 @@
 		<center>Rey Valentin Arias Perez<br>
 		Víctor Manuel Cañaveral Ortiz</center>
 	</p>
+	
+	
 
 	<footer>
-		<h4>PD: Si no esta escuchando musica de fondo es porque en chrome no encontre la forma de reproducir automaticamente la musica cuando la pagina carga, para mayor inmersion ver esta parte en edge o firefox</h4>
+		<a href="index.html" title="Clic para ir a la página principal"><img src="img/atras.png" width="50px" align="left">
+		</a><p>&nbsp;Volver hacia atras</p>
 	</footer>
 	
 </body>
