--- a/creditos.html
+++ b/creditos.html
@@ -14,6 +14,15 @@
 		<center>Rey Valentin Arias Perez<br>
 		Víctor Manuel Cañaveral Ortiz</center>
 	</p>
+
+	<div id="contenedor">
+		<center>
+		<div class="media"><img src="img/yo.gif" width="407px" height="518px"></div>
+		<div class="media"><video src="img/vidio.mp4" autoplay width="640px" height="360px"></video></div>
+		<div class="media"><img src="img/vic.gif" width="407px" height="518px"></div>
+		</center>
+	</div>
+	
 	
 	
 
