--- a/creditos.html
+++ b/creditos.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/credits.css">
+	<script src="js/credits.js"></script>
 	<link rel="icon" href="img/dice.ico">
 	<title>Creditos</title>
 </head>
@@ -18,18 +19,14 @@
 	<div id="contenedor">
 		<center>
 		<div class="media"><img src="img/yo.gif" width="407px" height="518px"></div>
-		<div class="media"><video src="img/vidio.mp4" autoplay width="640px" height="360px"></video></div>
+		<div id="vidio" class="media"><video src="img/starwars.mp4" autoplay width="640px" height="360px"></video></div>
 		<div class="media"><img src="img/vic.gif" width="407px" height="518px"></div>
 		</center>
 	</div>
 	
-	
-	
-
 	<footer>
 		<a href="index.html" title="Clic para ir a la página principal"><img src="img/atras.png" width="50px" align="left">
 		</a><p>&nbsp;Volver hacia atras</p>
 	</footer>
-	
 </body>
 </html>
