--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 	<script src="js/main.js"></script>
 	<link rel="icon" href="img/dice.ico">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-
 </head>
 
 <body>
@@ -27,6 +26,14 @@
 		</div>
 	</div>
 
+	<div id="instrucciones">
+	<h2>Instrucciones</h2>
+	<ul>
+		<li>Tienes que sacar un 7 o un 11 para ganar la partida.</li>
+		<li>Si sacas un 2, un 3 o un 12, pierdes la partida</li>
+		<li>Por el contrario si sacas un 4, un 5, un 6, un 8, un 9<br> o un 10,tendras que tirar los dados hasta que vuelvas<br> a sacar el número que obtuviste en un primer lugar<br> para ganar la partida.<br> Pero si primero sacas un 7 antes que dicho número,<br> pierdes la partida.</li>
+	</ul>
+	</div>
 	<footer>
 		<center><h3>Craps</h3></center>
 		<center><a href="creditos.html"> 🎬Creditos🎬</a></center>
